--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,114 +11,115 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<img id="logo"src="images/logo.png">
-<body class="wrapper" >
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
-    <pre id="content" style="white-space: pre-wrap;"></pre>
-      <div class="card card-4">
-        <h1 class="date">
-            <p id="intromessage">Connect via Gmail</p>
-            <p class="date-num" id="date-num"></p>
-            <p class="date-day" id="date-day"></p>
-        </h1>
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="title" id="eventsummary"></h2>
-          <p class="time" id="time"></p>
-          <p class="card__apply">
-          <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
-          <a id="cardinnertext"class="card__link" href="#">
-            <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div id= "rightcard"class="card card-5">
-        <div class="card__icon">
-          <img id= "weathericon"src="">
-        </div>
-        <h2 id="temperature"></h2>
-        <h2 id="forecast"></h2>
-        <p class="card__apply">
-        </p>
-      </div>
+<img id="logo" src="images/logo.png">
+
+<body class="wrapper">
+  <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
+  <pre id="content" style="white-space: pre-wrap;"></pre>
+  <div class="card card-4">
+    <h1 class="date">
+      <p id="intromessage">Connect via Gmail</p>
+      <p class="date-num" id="date-num"></p>
+      <p class="date-day" id="date-day"></p>
+    </h1>
+    <div class="card__icon"><i class="fas fa-bolt"></i></div>
+    <p class="card__exit"><i class="fas fa-times"></i></p>
+    <h2 class="title" id="eventsummary"></h2>
+    <p class="time" id="time"></p>
+    <p class="card__apply">
+      <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
+      <a id="cardinnertext" class="card__link" href="#">
+        <i class="fas fa-arrow-right"></i></a>
+    </p>
+  </div>
+  <div id="rightcard" class="card card-5">
+    <div class="card__icon">
+      <img id="weathericon" src="">
+    </div>
+    <h2 id="temperature"></h2>
+    <h2 id="forecast"></h2>
+    <p class="card__apply">
+    </p>
+  </div>
   <!-- Ashé's Code -->
   <section class="wrap" onload="initClock()">
     <div class="popup">
-        <button data-form-target="#form">
-            <div class="letter-image">
-              <div class="mail">
-                <div class="back-fold"></div>
-                <div class="letter">
-                  <div class="letter-border"></div>
-                  <div class="letter-title"></div>
-                  <h6><a class="buttonn" href="#popup1">How are you feeling?</a></h6>
-                  <div class="letter-context"></div>
-                  <div class="letter-stamp">
-                    <div class="letter-stamp-inner"></div>
-                  </div>
-                </div>
-                <div class="top-fold"></div>
-                <div class="body"></div>
-                <div class="left-fold"></div>
+      <button data-form-target="#form">
+        <div class="letter-image">
+          <div class="mail">
+            <div class="back-fold"></div>
+            <div class="letter">
+              <div class="letter-border"></div>
+              <div class="letter-title"></div>
+              <h6><a class="buttonn" href="#popup1">How are you feeling?</a></h6>
+              <div class="letter-context"></div>
+              <div class="letter-stamp">
+                <div class="letter-stamp-inner"></div>
               </div>
-              <div class="shadow"></div>
             </div>
-          </button>
-        <a id="close" href="#">Skip</a>
+            <div class="top-fold"></div>
+            <div class="body"></div>
+            <div class="left-fold"></div>
+          </div>
+          <div class="shadow"></div>
+        </div>
+      </button>
+      <a id="close" href="#">Skip</a>
     </div>
     <div id="overlay"></div>
-    </section>
-    <div id="popup1" class="over">
-      <div class="pop">
-        <h4>Write your feelings and let them go</h4>
-        <a class="closed" href="#">Let it go</a>
-        <div class="content">
-          <textarea class="textarea" placeholder="Don't worry I won't tell anyone"></textarea>
-        </div>
+  </section>
+  <div id="popup1" class="over">
+    <div class="pop">
+      <h4>Write your feelings and let them go</h4>
+      <a class="closed" href="#">Let it go</a>
+      <div class="content">
+        <textarea class="textarea" placeholder="Don't worry I won't tell anyone"></textarea>
       </div>
     </div>
-<!-- digital clock start -->
-<script>
-  function show(format) {
-    var time = new Date();
-    var str = "";
-    if (format === "New_York") {
+  </div>
+  <!-- digital clock start -->
+  <script>
+    function show(format) {
+      var time = new Date();
+      var str = "";
+      if (format === "New_York") {
         str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
         // str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
         // str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
-    }
-    else if (format === "Paris") {
+      }
+      else if (format === "Paris") {
         // str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
         str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
         // str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
-    }
-    else if (format === "Tokyo") {
+      }
+      else if (format === "Tokyo") {
         // str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
         // str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
         str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
+      }
+      // else {
+      //     str += "London " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour12: false, hour: "2-digit", minute: "2-digit" }) + "<br>";
+      //     str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour12: false, hour: "2-digit", minute: "2-digit" }) + "<br>";
+      //     str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour12: false, hour: "2-digit", minute: "2-digit" });
+      // }
+      document.getElementById("displayTime").innerHTML = str;
     }
-    // else {
-    //     str += "London " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour12: false, hour: "2-digit", minute: "2-digit" }) + "<br>";
-    //     str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour12: false, hour: "2-digit", minute: "2-digit" }) + "<br>";
-    //     str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour12: false, hour: "2-digit", minute: "2-digit" });
-    // }
-    document.getElementById("displayTime").innerHTML = str;
-}
-window.onload = function() { show("New_York") };
-</script>
-<div id="thisTime">
-<p>Time :
-    <select name="select" id="select" onchange="show(this.value)">
+    window.onload = function () { show("New_York") };
+  </script>
+  <div id="thisTime">
+    <p>Time :
+      <select name="select" id="select" onchange="show(this.value)">
         <option value="New_York">New York</option>
         <option value="Paris">Paris</option>
         <option value="Tokyo">Tokyo</option>
-    </select>
-</p>
-<div id="displayTime"></div>
-</div>
-<!-- end clock -->
-<!-- Ashé's Code ends here -->
-<!-- Things to do -->
-  <div id= "bottomcard"class="card card-3">
+      </select>
+    </p>
+    <div id="displayTime"></div>
+  </div>
+  <!-- end clock -->
+  <!-- Ashé's Code ends here -->
+  <!-- Things to do -->
+  <div id="bottomcard" class="card card-3">
     <div class="card__icon"><i class="fas fa-bolt"></i></div>
     <p class="card__exit"><i class="fas fa-times"></i></p>
     <h1>Things To-Do</h1>
@@ -131,8 +133,11 @@ window.onload = function() { show("New_York") };
   </div>
   <!-- end of to do list -->
   <div class="zenMode">
-    <p id="zen">Feeling Down?</p>
+    <button class="glow-on-hover" type="button">
+      <p id="zen">Feeling Down?</p>
+    </button>
   </div>
+ 
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
   <script src="js/calendar.js"></script>
@@ -140,4 +145,5 @@ window.onload = function() { show("New_York") };
   <script type="module" src="weather.js"></script>
   <script type="module" src="dolist.js"></script>
 </body>
+
 </html>
